--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
