--- a/back-end/package.json
+++ b/back-end/package.json
@@ -20,6 +20,11 @@
   "devDependencies": {
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
-    "mocha": "^9.2.0"
+    "mocha": "^9.2.0",
+    "prettier": "^2.5.1",
+    "eslint": "^8.7.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.4"
   }
 }
