--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.25.0",
     "framer-motion": "^4.1.17",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^3.11.0",
@@ -20,6 +21,7 @@
     "react-scripts": "5.0.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
