--- a/back-end/.env
+++ b/back-end/.env
@@ -1,2 +1,3 @@
 ATLAS_URI=mongodb+srv://missaMongo:4VQVL7KskP3TT3Oa@cluster0.p5zap.mongodb.net/StudyTogether?retryWrites=true&w=majority
 PORT=8000
+JWT_SECRET=Ov&8rCuE7GVrGW5wNA@V^xlR5WoshOk!^gHmIsByDe7@gA#3Xu1plQuLo1fILJG%
