--- a/back-end/package.json
+++ b/back-end/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "dotenv": "^14.3.2",
     "express": "~4.16.1",
+    "express-validator": "^6.14.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
