--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha"
+    "test": "NODE_ENV=test mocha --exit"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
