--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,10 +12,12 @@
     "debug": "~2.6.9",
     "dotenv": "^14.3.2",
     "express": "~4.16.1",
+    "express-validator": "^6.14.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongoose": "^6.1.8",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodemailer": "^6.7.2"
   },
   "devDependencies": {
     "chai": "^4.3.6",
