--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "NODE_ENV=test mocha --exit"
+    "test": "NODE_ENV=test mocha --exit",
+    "dev": "node ./bin/www"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -31,6 +32,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
     "mocha": "^9.2.0",
+    "nodemon": "^2.0.15",
     "prettier": "^2.5.1"
   }
 }
