[STUD-36] Added the remaning inputs. Started hooking up the front-end to the back-end.

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,11 +15,14 @@
     "google-maps-react": "^2.0.6",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
+    "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
     "react-icons": "^3.11.0",
+    "react-phone-number-input": "^3.1.46",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-time-picker": "^4.5.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.3",
