--- a/front-end/package.json
+++ b/front-end/package.json
@@ -6,6 +6,7 @@
     "@chakra-ui/react": "^1.8.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@react-google-maps/api": "^2.7.0",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^10.4.9",
@@ -22,6 +23,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-tag-input": "^6.8.0",
     "react-time-picker": "^4.5.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
