--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "test": "NODE_ENV=test mocha --exit",
-    "dev": "node ./bin/www"
+    "dev": "npx nodemon ./bin/www"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
