--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 node_modules
+package-lock.json
 
 # misc
 .DS_Store
@@ -14,3 +15,7 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# VS Code Settings
+.vscode
+back-end/package-lock.json
