--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,6 +17,8 @@
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-datepicker": "^4.6.0",
+    "react-dnd": "^15.1.1",
+    "react-dnd-html5-backend": "^15.1.2",
     "react-dom": "^17.0.2",
     "react-icons": "^3.11.0",
     "react-phone-number-input": "^3.1.46",
