--- a/front-end/package.json
+++ b/front-end/package.json
@@ -23,8 +23,10 @@
     "react-icons": "^3.11.0",
     "react-phone-number-input": "^3.1.46",
     "react-redux": "^7.2.6",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.5",
     "react-tag-input": "^6.8.0",
     "react-time-picker": "^4.5.0",
     "redux-devtools-extension": "^2.13.9",
