--- a/front-end/.eslintrc.json
+++ b/front-end/.eslintrc.json
@@ -7,9 +7,7 @@
         "prettier"
     ],
     "rules": {
-        // "prettier/prettier": [
-        //     "error"
-        // ],
+        "no-underscore-dangle": "off",
         "react/jsx-filename-extension": [
             1,
             {
