--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "NODE_ENV=test mocha --exit",
+    "test": "NODE_ENV=test mocha --timeout 5000 --file ./test/rootHooks.js --exit",
     "dev": "npx nodemon ./bin/www"
   },
   "dependencies": {
