--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "NODE_ENV=test mocha --timeout 5000 --file ./test/rootHooks.js --exit",
+    "test": "NODE_ENV=test mocha --timeout 5000 --file ./test/hooks.js --exit",
     "dev": "npx nodemon ./bin/www"
   },
   "dependencies": {
@@ -33,6 +33,7 @@
     "eslint-plugin-import": "^2.25.4",
     "mocha": "^9.2.0",
     "nodemon": "^2.0.15",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "request": "^2.88.2"
   }
 }
