--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.25.0",
+    "dateformat": "^5.0.3",
     "framer-motion": "^4.1.17",
     "google-maps-react": "^2.0.6",
     "prop-types": "^15.8.1",
