--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,8 +14,10 @@
     "axios": "^0.25.0",
     "framer-motion": "^4.1.17",
     "google-maps-react": "^2.0.6",
+    "moment": "^2.29.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
+    "react-big-calendar": "^0.39.2",
     "react-datepicker": "^4.6.0",
     "react-dnd": "^15.1.1",
     "react-dnd-html5-backend": "^15.1.2",
