--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,7 @@
     "dateformat": "^5.0.3",
     "framer-motion": "^4.1.17",
     "google-maps-react": "^2.0.6",
+    "moment": "^2.29.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-datepicker": "^4.6.0",
