--- a/front-end/package.json
+++ b/front-end/package.json
@@ -31,6 +31,7 @@
     "react-time-picker": "^4.5.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^0.2.4"
   },
