Stud 67/push notification (#53)
- Added socket.io and socket.io-client packages to help with websockets for real time notifications
- When the host of a group you are registered in makes any updates, the members are notified.
- When a person you follow created a new group -> you are notified

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.8.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
@@ -32,6 +33,7 @@
     "react-time-picker": "^4.5.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^0.2.4"
   },
