--- a/back-end/package.json
+++ b/back-end/package.json
@@ -21,6 +21,8 @@
     "morgan": "~1.9.1",
     "nodemailer": "^6.7.2",
     "pug": "^3.0.2",
+    "redis": "^4.0.4",
+    "socket.io": "^4.4.1",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.3.0"
   },
