--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.25.0",
+    "dotenv": "^16.0.0",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "google-maps-react": "^2.0.6",
