--- a/front-end/package.json
+++ b/front-end/package.json
@@ -26,6 +26,7 @@
     "react-dnd-html5-backend": "^15.1.2",
     "react-dom": "^17.0.2",
     "react-icons": "^3.11.0",
+    "react-multi-carousel": "^2.8.0",
     "react-phone-number-input": "^3.1.46",
     "react-redux": "^7.2.6",
     "react-reveal": "^1.2.2",
